; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_resource.c_rlimit.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_resource.c_rlimit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rlimit_ = type { i32 }

@current = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"invalid resource %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rlimit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rlimit_, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @current, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i64 @rlimit_get(i32 %4, i32 %5, %struct.rlimit_* %3)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @die(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %9)
  br label %11

11:                                               ; preds = %8, %1
  %12 = getelementptr inbounds %struct.rlimit_, %struct.rlimit_* %3, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  ret i32 %13
}

declare dso_local i64 @rlimit_get(i32, i32, %struct.rlimit_*) #1

declare dso_local i32 @die(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
